--- a/app/admincp/ui/ueditor/dialogs/webapp/webapp.html
+++ b/app/admincp/ui/ueditor/dialogs/webapp/webapp.html
@@ -24,7 +24,7 @@
                 search:1, //是否显示搜索框
                 ps:12, //每页显示的条数
                 suggest:1, //是否开启搜索自动完成
-                limit:0, //搜索结果显示条数，0表示无限制
+                limit:0, //搜索结果显示条数,0表示无限制
                 searchNow:0, //是否在初始化完成时立即搜索
                 apikey:apikey, //每人得
                 pager:1,
