--- a/app/admincp/ui/ueditor/dialogs/snapscreen/snapscreen.html
+++ b/app/admincp/ui/ueditor/dialogs/snapscreen/snapscreen.html
@@ -35,7 +35,7 @@
             }
             dt a:active{
                 background: #ccc;
-                border-color: #999;
+                border-color: #8395a7;
                 color: rgb(103, 128, 159);
             }
             dd { line-height:20px;margin-top: 10px;}
